@@ -69,7 +69,7 @@ function buildSubtitle(i, showRatings) {
     if (i.artist_id && !IS_MOBILE && subtitle) {
         subtitle="<a href=\"#\" onclick=\"showArtist("+i.artist_id+",\'"+escape(subtitle)+"\')\">" + subtitle + "</a>";
     }
-    if (i.composer && i.genre && COMPOSER_GENRES.has(i.genre)) {
+    if (i.composer && i.genre && LMS_COMPOSER_GENRES.has(i.genre)) {
         var composer_ids = i.composer_ids ? i.composer_ids.split(",") : undefined;
         if (composer_ids && 1==composer_ids.length) {
             if (IS_MOBILE) {
